--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="Veckodag">Veckodag:</string>
     <string name="Antalbiljetter">Antal Biljetter</string>
     <string name="SökResa">Sök Resa</string>
+    <string name="title_activity_main3">Main3Activity</string>
 </resources>
